--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
     "file-loader": "^6.2.0",
     "raw-loader": "^4.0.2",
     "three": "^0.128.0",
+    "webpack": "^5.35.1",
     "webpack-cli": "^4.6.0",
     "webpack-dev-server": "^3.11.2"
   },
