--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
   "main": "index.js",
   "devDependencies": {
     "file-loader": "^6.2.0",
+    "gh-pages": "^3.1.0",
     "raw-loader": "^4.0.2",
     "three": "^0.128.0",
     "webpack": "^5.35.1",
@@ -13,7 +14,9 @@
   },
   "scripts": {
     "dev": "npx webpack serve --config webpack.config.js",
-    "deploy": "npx webpack --config webpack.config.js --mode production"
+    "build": "npx webpack --config webpack.config.js --mode production",
+    "predeploy": "npm run build",
+    "deploy": "gh-pages -b main -d build"
   },
   "author": "",
   "license": "ISC"
